# q-e

./: Makefile
COUPLE/src/: Makefile  libplugin.f90
CPV/src/: Makefile
MDI/: CMakeLists.txt  Makefile
MDI/src/: Makefile  libqemdi.f90  qemdi.f90
Modules/: CMakeLists.txt  Makefile  fsockets.f90  make.depend  mdi_engine.f90  mp_global.f90  mp_world.f90  qmmm.f90
PW/src/: Makefile  forces.f90  make.depend  pwscf.f90  run_driver.f90  run_mdi.f90  setlocal.f90
PW/tools/: Makefile
clib/: Makefile  sockets.c
dev/: README.md  full_build.sh  gnu_build.sh  mac_build.sh  rebuild.sh
install/: make.inc.in
mdi/: Makefile
mdi/MDI_Library/: mdi_lib.c
mdi/tests/MDI_Test_Codes/: CMakeLists.txt
mdi/tests/MDI_Test_Codes/driver_plug_c/: CMakeLists.txt  driver_plug_c.c
upflib/: wxml.f90
